syntax = "proto3";
option go_package = "gocn/gen/usersrv";
package com.github.gotomicro.fastgocn.proto.user;

service User {
  rpc LoginWechat (LoginWechatRequest) returns (LoginWechatReply) {} // 微信登录请求
}

// 微信登录请求
message LoginWechatRequest {
  string wxUserCode = 1;
  string wxUserEncryptedData = 2;
  string wxUserIv = 3;
  string wxPhoneCode = 4;
  string wxPhoneEncryptedData = 5;
  string wxPhoneIv = 6;
  string clientIp = 7;
}

// 微信登录响应
message LoginWechatReply {
  int64  uid = 1;
  string nickname = 2;
  string avatar = 3;
  string token = 4;     // access token
  string phone = 5;
  int64  expiredAt = 6; // 过期的时间
}